# code-sitter

./: .env.example  .env.template  .gitignore  ANALYZER_FIX.md  ANALYZER_STANDALONE.md  DECISION_GUIDE.md  ENHANCED_README.md  EXTRACT_STRUCTURE_VS_METADATA_COMPARISON.md  FINAL_ANSWER.md  FIXED_IMPLEMENTATION.md  FUNCTION_CALL_ASSOCIATION.md  IMPLEMENTATION_COMPARISON.md  NEXT_STEPS.md  QUICK_FIX.md  QUICK_REFERENCE.md  README.md  UNIVERSAL_EXTRACTION_COMPARISON.md  analyzer_examples.py  check_languages.py  check_patterns.py  cli.py  codemcp.toml  compare_chunking.py  complete_fix_analyzer_aware.sh  debug_analyze.py  debug_analyzer.sh  debug_analyzer_aware.py  debug_export_detection.py  debug_extractor.py  debug_flow_direct.py  debug_index.py  debug_missing_elements.py  debug_modified_index.py  debug_specific_file.py  debug_structure_extraction.py  debug_tree_sitter.py  debug_typescript_analyzer.py  debug_visibility.py  demo_exports_current.py  demo_smart_chunking.py  (+67 more)
analyzers/: __init__.py  registry.py
analyzers/languages/: __init__.py  java.py  python.py  typescript.py
codesitter/cli/: config.py
codesitter/flows/: __init__.py  basic.py
docker/postgres/: compose.yaml
docs/: ADDING_LANGUAGES.md  ANALYZER_CLI.md  ANALYZE_BEFORE_AFTER.md  ARCHITECTURE.md  COCOINDEX_COMPLETE_GUIDE.md  COCOINDEX_CORRECT_IMPLEMENTATION.md  DEVELOPMENT.md  DOSSIER_IMPLEMENTATION.md  ENHANCED_ANALYSIS_GUIDE.md  FILE_COUNT_IMPLEMENTATION.md  FILE_LOGGING_ENHANCEMENT.md  FIXES_SUMMARY.md  FLOWS_STATUS.md  NEXT_STEPS.md  ONE_COMMAND_FIX.md  PARSER_FIX.md  PROJECT_DESCRIPTION.md  QUICKSTART.md  README_NEW.md  SMART_CHUNKING.md  TROUBLESHOOTING_ANALYZER_AWARE.md  TYPESCRIPT_ANALYZER_FIX.md  TYPESCRIPT_ANALYZER_USAGE.md  USING_ANALYZER_FLOWS.md
docs/analyzer/: ANALYZER_DETAILED_USAGE.md  ANALYZER_STANDALONE.md  DISAPPOINTMENT_OF_FEATURE_ADDED_SUMMARY.md  DOCUMENTATION_UPDATES.md  README.md  (+13 more)
examples/: api_client.py  enhanced_api_client.py  enhanced_queries.sh
scripts/: README.md  example.py  web_ui.py
(+57 files in other folders)
